k8s/overlays/staging/patches/deployment-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-app-dpl
  namespace: insights
spec:
  template:
    spec:
      containers:
        - name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: package-downloads-worker-dpl
  namespace: insights
spec:
  template:
    spec:
      containers:
        - name: package-downloads-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-volume-worker-dpl
  namespace: insights
spec:
  template:
    spec:
      containers:
        - name: search-volume-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dpl
  namespace: insights
spec:
  template:
    spec:
      containers:
        - name: redis
          command:
            - /bin/sh
            - -c
          args:
            - redis-server /redis.conf --requirepass "$REDIS_PASSWORD"
